# ixiaInventoryExplorer

./: .dockerignore  .gcloudignore  .gitignore  CREDENTIAL_ARCHITECTURE.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  IxNetworkRestAPICaller.py  IxOSRestAPICaller.py  Readme.md  TESTING.md  build-docker.sh  check-pollers.sh  cloudbuild.yaml  credential_provider.py  credentials.json.example  data_poller.py  db_queries.py  docker-compose.combined.yml  docker-compose.dev.yml  docker-compose.separate.yml  docker-compose.yml  docker-entrypoint-frontend.sh  docker-entrypoint.sh  docker-rebuild.sh  example_mcp_integration.py  index.html  init_db.py  linuxAPIServer.md  main.py  mods.md  openapi.json  package-lock.json  package.json  pyproject.toml  requirements.txt  runApplication.sh  setup-with-ixse.sh  start.sh  (+6 more)
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
RestApi/: IxOSRestInterface.py
app/: database.py
app/api/: cards.py  chassis.py  config.py  ixnetwork_servers.py  licenses.py  logs.py  performance.py  poll.py  ports.py  sensors.py  tags.py
app/models/: __init__.py  cards.py  chassis.py  config.py  licenses.py  logs.py  performance.py  ports.py  sensors.py  tags.py
docs/: ADK_CONFIGURATION.md  ADK_WALKTHROUGH.md  DOCKER_DEPLOYMENT.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_FRONTEND_GUIDE.md  PROJECT_STRUCTURE.md
docs/plans/: 2026-05-21-add-chassisrole.md
src/: App.jsx  index.css
src/components/: ChatAssistant.jsx  ChatMessage.jsx
src/context/: AppContext.jsx  ThemeContext.jsx
(+25 files in other folders)
