[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ixia-inventory-explorer"
version = "2.0.0"
description = "Ixia Inventory Explorer - FastAPI Edition"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.19.0",
    "pandas",
    "requests",
    "click",
    "ixnetwork_restpy",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

